package com.javatpoint;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/7/2021 11:46 PM
*/

public interface MobileShop {
    public void modelNo();
    public void price();
}
