package com.javatpoint;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/7/2021 11:48 PM
*/

public class Samsung implements MobileShop {
    @Override
    public void modelNo() {
        System.out.println(" Samsung Galaxy Tab 3 ");
    }

    @Override
    public void price() {
        System.out.println(" 450 $ ");
    }
}
